...
                                <rect key="frame" x="485" y="746.5" width="224" height="41"/>
                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="25"/>
                                <state key="normal" title="Create a new account">
                                    <color key="titleColor" red="0.28627450980000002" green="0.1450980392" blue="0.1450980392" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="30" height="34"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="image" keyPath="icon" value="opt"/>
                                            <userDefinedRuntimeAttribute type="image" keyPath="iconSelected" value="selected_opt"/>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="iconSquare" value="YES"/>
...
                                </subviews>
                            </stackView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AM5-4N-taJ">
                                <rect key="frame" x="365" y="513.5" width="464" height="54"/>
                                <nil key="textColor"/>
...
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OWs-QH-KWK">
                                <rect key="frame" x="365" y="442.5" width="464" height="56"/>
                                <nil key="textColor"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Corbel-Bold" family="Corbel" pointSize="40"/>
                                <state key="normal" title="LOGIN">
                                    <color key="titleColor" red="0.38823529410000002" green="0.38823529410000002" blue="0.38823529410000002" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to Play Ball Tilt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kq1-fU-vcO">
                                <rect key="frame" x="432.5" y="54" width="329" height="46"/>
                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="40"/>
...
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to Play Word Match" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfT-Rm-5B4">
                                <rect key="frame" x="391" y="54" width="412" height="46"/>
                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="40"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="30"/>
                                <state key="normal" title="How to Play">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="width" constant="244" id="HmM-jy-eTF"/>
                                </constraints>
                                <state key="normal" image="Play Button"/>
                                <connections>
                                    <segue destination="JAg-28-k1L" kind="show" id="W4j-X3-8Yl"/>
...
                                    <constraint firstAttribute="height" constant="22" id="big-Bb-Miq"/>
                                </constraints>
                                <state key="normal" image="settings"/>
                                <connections>
                                    <segue destination="LGT-1T-imR" kind="show" id="GqG-zA-8Ij"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose a game" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OO1-oO-8s4">
                                <rect key="frame" x="471.5" y="84" width="251" height="46"/>
                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="40"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ftB-22-hIe">
                                <rect key="frame" x="365" y="578" width="464" height="56"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CFF-x4-4Pl">
                                <rect key="frame" x="365" y="320" width="464" height="56"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="13E-5C-Rmp">
                                <rect key="frame" x="365" y="234" width="464" height="56"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="40"/>
                                <state key="normal" title="CREATE MY ACCOUNT">
                                    <color key="titleColor" red="0.38823529410000002" green="0.38823529410000002" blue="0.38823529410000002" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
