...
        // Do any additional setup after loading the view.
    }
    
    @IBAction func addButtonTapped(_ sender: Any) {
        let emailp = emailTextField.text!.trimmingCharacters(in: .whitespacesAndNewlines)
        if emailp == ""{
            let alert = UIAlertController(title: "Warning", message: "please fill in the email address before add", preferredStyle: .alert)
            
            alert.addAction(UIAlertAction(title: "Yes", style: .default, handler: nil))
           
            
            self.present(alert, animated: true)
        }
        if Auth.auth().currentUser != nil {
            // User is signed in.
...
